--- a/app/src/main/res/layout/card_view_employee.xml
+++ b/app/src/main/res/layout/card_view_employee.xml
@@ -25,13 +25,14 @@
             android:layout_gravity="center"
             android:layout_marginHorizontal="8dp"
             android:layout_marginTop="12dp"
-            android:gravity="left"
-            android:orientation="horizontal">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/img_employee_profile_pic"
                 android:layout_width="50dp"
-                android:layout_height="50dp">
+                android:layout_height="50dp"
+                android:src="@drawable/ic_launcher_background">
 
             </ImageView>
 
