Picasso implemetation has been added and card view for employee data has been modified

--- a/app/src/main/res/layout/card_view_employee.xml
+++ b/app/src/main/res/layout/card_view_employee.xml
@@ -17,57 +17,38 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
+        android:layout_margin="8dp"
         android:orientation="vertical">
 
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginHorizontal="8dp"
-            android:layout_marginTop="12dp"
-            android:gravity="center"
-            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/img_employee_profile_pic"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/ic_launcher_background">
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@drawable/ic_person">
 
             </ImageView>
 
-            <androidx.appcompat.widget.LinearLayoutCompat
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="left"
-                android:layout_marginLeft="10dp"
-                android:orientation="horizontal">
-
-                <androidx.appcompat.widget.LinearLayoutCompat
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginHorizontal="8dp"
-                    android:gravity="left"
-                    android:orientation="vertical">
 
 
                     <TextView
                         android:id="@+id/txt_employee_name"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="serif"
-                        android:textColor="#C1C7C9"
+                        android:textColor="@color/colorTextView"
+                        android:textAlignment="center"
                         android:textSize="14sp"
                         android:textStyle="bold|italic" />
 
                     <TextView
                         android:id="@+id/txt_employee_age"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="serif"
-                        android:textColor="#A7AFB2"
+                        android:textColor="@color/colorTextView"
                         android:textSize="12sp"
+                        android:textAlignment="center"
                         android:layout_marginBottom="4dp"
                         android:textStyle="italic" />
 
@@ -82,38 +63,19 @@
 
                         <TextView
                             android:id="@+id/txt_employee_salary"
-                            android:layout_width="0dp"
-                            android:layout_weight="3"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:fontFamily="serif"
-                            android:textColor="@android:color/white"
+                            android:textColor="@color/colorTextView"
+                            android:textAlignment="center"
                             android:textSize="10sp"
                             android:textStyle="italic" />
-
-                        <TextView
-                            android:id="@+id/txt_status"
-                            android:layout_height="wrap_content"
-                            android:layout_width="0dp"
-                            android:layout_weight="2"
-                            android:fontFamily="casual"
-                            android:textAllCaps="false"
-                            android:textColor="@android:color/white"
-                            android:textSize="10sp"
-                            android:textStyle="italic" />
-
-
 
 
                     </androidx.appcompat.widget.LinearLayoutCompat>
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
-            </androidx.appcompat.widget.LinearLayoutCompat>
 
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-
-    </androidx.appcompat.widget.LinearLayoutCompat>
 
 
 </androidx.cardview.widget.CardView>
