--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+    <color name="colorPrimary">#96134C</color>
+    <color name="colorPrimaryDark">#790E3D</color>
+    <color name="colorAccent">#DCDCDC</color>
+    <color name="colorTextView">#A7AFB2</color>
 </resources>
