--- a/app/src/main/res/layout/card_view_employee.xml
+++ b/app/src/main/res/layout/card_view_employee.xml
@@ -9,6 +9,7 @@
     android:clickable="true"
     app:cardPreventCornerOverlap="true"
     app:cardCornerRadius="20dp"
+    android:background="@android:color/white"
     android:layout_gravity="center">
 
     <androidx.appcompat.widget.LinearLayoutCompat
@@ -25,17 +26,14 @@
                 android:id="@+id/img_employee_profile_pic"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:src="@drawable/ic_person">
-
-            </ImageView>
-
-
-
+                android:layout_margin="8dp"
+                />
                     <TextView
                         android:id="@+id/txt_employee_name"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="serif"
+                        android:layout_margin="8dp"
                         android:textColor="@color/colorTextView"
                         android:textAlignment="center"
                         android:textSize="14sp"
@@ -48,6 +46,7 @@
                         android:fontFamily="serif"
                         android:textColor="@color/colorTextView"
                         android:textSize="12sp"
+                        android:visibility="gone"
                         android:textAlignment="center"
                         android:layout_marginBottom="4dp"
                         android:textStyle="italic" />
@@ -58,6 +57,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginVertical="6dp"
+                        android:visibility="gone"
                         android:orientation="horizontal">
 
 
@@ -69,6 +69,7 @@
                             android:textColor="@color/colorTextView"
                             android:textAlignment="center"
                             android:textSize="10sp"
+                            android:visibility="gone"
                             android:textStyle="italic" />
 
 
