--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#96134C</color>
-    <color name="colorPrimaryDark">#790E3D</color>
+    <color name="colorPrimary">#111111</color>
+    <color name="colorPrimaryDark">#222222</color>
     <color name="colorAccent">#DCDCDC</color>
     <color name="colorTextView">#A7AFB2</color>
+    <color name="black_light">#111111</color>
 </resources>
