--- a/app/src/main/res/layout/activity_employee_detail.xml
+++ b/app/src/main/res/layout/activity_employee_detail.xml
@@ -48,11 +48,11 @@
                 android:id="@+id/txt_employee_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="8dp"
+                android:layout_margin="16dp"
                 android:fontFamily="serif"
                 android:textAlignment="center"
                 android:textColor="@color/colorTextView"
-                android:textSize="14sp"
+                android:textSize="16sp"
                 android:textStyle="bold|italic" />
 
 
@@ -70,7 +70,7 @@
                     <TextView
                         android:id="@+id/txt_employee_age_label"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_height="20dp"
                         android:fontFamily="serif"
                         android:gravity="end"
                         android:textAlignment="textEnd"
@@ -97,7 +97,7 @@
                     android:id="@+id/divider"
                     android:layout_width="1dp"
                     android:layout_height="match_parent"
-                    android:layout_marginHorizontal="28dp"
+                    android:layout_marginHorizontal="48dp"
                     android:background="?android:attr/listDivider" />
 
                 <androidx.appcompat.widget.LinearLayoutCompat
