--- a/app/src/main/res/layout/card_view_employee.xml
+++ b/app/src/main/res/layout/card_view_employee.xml
@@ -12,13 +12,18 @@
     android:background="@android:color/white"
     android:layout_gravity="center">
 
+    <com.balysv.materialripple.MaterialRippleLayout
+        android:id="@+id/ripple"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true">
+
     <androidx.appcompat.widget.LinearLayoutCompat
         android:id="@+id/lnr_employee"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
-        android:layout_margin="8dp"
         android:orientation="vertical">
 
 
@@ -77,6 +82,6 @@
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
-
+    </com.balysv.materialripple.MaterialRippleLayout>
 
 </androidx.cardview.widget.CardView>
