--- a/app/src/main/res/layout/activity_employee_detail.xml
+++ b/app/src/main/res/layout/activity_employee_detail.xml
@@ -19,6 +19,7 @@
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" >
+
          <ImageView
             android:layout_width="36dp"
             android:layout_height="36dp"
@@ -52,14 +53,13 @@
 
             <TextView
                 android:id="@+id/txt_employee_name"
+                style="@style/textViewStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:fontFamily="serif"
-                android:textAlignment="center"
-                android:textColor="@color/colorTextView"
-                android:textSize="16sp"
-                android:textStyle="bold|italic" />
+                android:textStyle="bold|italic"
+                android:textAlignment="center" />
 
 
             <androidx.appcompat.widget.LinearLayoutCompat
@@ -75,24 +75,24 @@
 
                     <TextView
                         android:id="@+id/txt_employee_age_label"
+                        style="@style/textViewStyle"
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
                         android:fontFamily="serif"
                         android:gravity="end"
                         android:textAlignment="textEnd"
-                        android:textColor="@color/colorTextView"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:textStyle="italic" />
 
                     <TextView
                         android:id="@+id/txt_employee_age"
+                        style="@style/textViewStyle"
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
                         android:fontFamily="serif"
                         android:gravity="end"
                         android:textAlignment="textEnd"
-                        android:textColor="@color/colorTextView"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:textStyle="italic" />
 
 
@@ -101,7 +101,7 @@
 
                 <View
                     android:id="@+id/divider"
-                    android:layout_width="1dp"
+                    android:layout_width="2dp"
                     android:layout_height="match_parent"
                     android:layout_marginHorizontal="48dp"
                     android:background="?android:attr/listDivider" />
@@ -115,25 +115,25 @@
 
                     <TextView
                         android:id="@+id/txt_employee_salary_label"
+                        style="@style/textViewStyle"
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
                         android:fontFamily="serif"
                         android:gravity="start"
                         android:textAlignment="textStart"
-                        android:textColor="@color/colorTextView"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:textStyle="italic"
                         tools:ignore="RtlCompat" />
 
                     <TextView
                         android:id="@+id/txt_employee_salary"
+                        style="@style/textViewStyle"
                         android:layout_width="match_parent"
                         android:layout_height="20dp"
                         android:fontFamily="serif"
                         android:gravity="start"
                         android:textAlignment="textStart"
-                        android:textColor="@color/colorTextView"
-                        android:textSize="12sp"
+                        android:textSize="14sp"
                         android:textStyle="italic"
                         tools:ignore="RtlCompat" />
 
