--- a/app/src/main/res/layout/activity_not_connected.xml
+++ b/app/src/main/res/layout/activity_not_connected.xml
@@ -1,18 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
-    android:orientation="vertical"
+    android:background="@color/colorPrimaryDark"
     tools:context=".activity.NotConnectedActivity">
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="162dp"
-        android:layout_height="130dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="36dp"
         app:srcCompat="@drawable/ic_no_connection"
@@ -20,28 +26,42 @@
 
     <TextView
         android:id="@+id/textView7"
+        style="@style/textViewStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="@string/no_internet_connection"
         android:textAlignment="center"
-        android:textSize="25dp"
-        android:typeface="serif" />
+        android:textSize="22dp"
+        android:typeface="serif"
+        android:fontFamily="serif"
+        android:textStyle="bold|italic"/>
 
     <TextView
         android:id="@+id/textView8"
+        style="@style/textViewStyle"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="36dp"
         android:text="@string/check_your_connection"
         android:textAlignment="center"
-        android:typeface="serif" />
+        android:fontFamily="serif"
+        android:textStyle="italic"
+        />
+
+
 
     <Button
-        android:id="@+id/btn_order_voucher"
-        android:layout_width="304dp"
+        android:id="@+id/btn_retry"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="64dp"
         android:onClick="getBackToPrevious"
-        android:text="@string/retry" />
-</LinearLayout>
+        android:text="@string/retry"
+        android:textColor="@drawable/button_color_selector"
+        android:background="@drawable/button_state_colors"/>
+
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+</androidx.core.widget.NestedScrollView>
