--- a/app/src/main/res/layout/card_view_employee.xml
+++ b/app/src/main/res/layout/card_view_employee.xml
@@ -31,54 +31,20 @@
                 android:id="@+id/img_employee_profile_pic"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                android:layout_margin="8dp"
-                />
-                    <TextView
+                android:layout_margin="8dp" />
+
+                     <TextView
                         android:id="@+id/txt_employee_name"
+                        style="@style/textViewStyle"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="serif"
+                         android:textStyle="bold|italic"
                         android:layout_margin="8dp"
-                        android:textColor="@color/colorTextView"
+                        android:textColor="@color/colorDarkGray"
                         android:textAlignment="center"
                         android:textSize="14sp"
-                        android:textStyle="bold|italic" />
-
-                    <TextView
-                        android:id="@+id/txt_employee_age"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="serif"
-                        android:textColor="@color/colorTextView"
-                        android:textSize="12sp"
-                        android:visibility="gone"
-                        android:textAlignment="center"
-                        android:layout_marginBottom="4dp"
-                        android:textStyle="italic" />
-
-
-
-                    <androidx.appcompat.widget.LinearLayoutCompat
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginVertical="6dp"
-                        android:visibility="gone"
-                        android:orientation="horizontal">
-
-
-                        <TextView
-                            android:id="@+id/txt_employee_salary"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:fontFamily="serif"
-                            android:textColor="@color/colorTextView"
-                            android:textAlignment="center"
-                            android:textSize="10sp"
-                            android:visibility="gone"
-                            android:textStyle="italic" />
-
-
-                    </androidx.appcompat.widget.LinearLayoutCompat>
+                         />
 
                 </androidx.appcompat.widget.LinearLayoutCompat>
 
