--- a/app/src/main/res/drawable/elipse_dark.xml
+++ b/app/src/main/res/drawable/elipse_dark.xml
@@ -3,7 +3,7 @@
 <corners android:radius="20dp"/>
     <solid android:color="@color/colorAccent"/>
     <gradient
-        android:startColor="@color/colorPrimary"
-        android:endColor="@color/colorPrimary"/>
+        android:startColor="@color/colorPrimaryDarker"
+        android:endColor="@color/colorPrimaryDarker"/>
 </shape>
 
