--- a/app/src/main/res/drawable/shape_elipse_border_nobackground.xml
+++ b/app/src/main/res/drawable/shape_elipse_border_nobackground.xml
@@ -5,7 +5,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/colorPrimaryDark" />
+        android:color="@color/colorPrimary" />
     <gradient
         android:endColor="@color/colorAccent"
         android:startColor="@color/colorAccent" />
