--- a/app/src/main/res/drawable/shape_elipse_dark.xml
+++ b/app/src/main/res/drawable/shape_elipse_dark.xml
@@ -3,6 +3,6 @@
     <corners android:radius="20dp" />
     <solid android:color="@color/colorAccent" />
     <gradient
-        android:endColor="@color/colorPrimary"
-        android:startColor="@color/colorPrimary" />
+        android:endColor="@color/colorPrimaryDarker"
+        android:startColor="@color/colorPrimaryDarker" />
 </shape>
