--- a/app/src/main/res/layout/activity_employee_detail.xml
+++ b/app/src/main/res/layout/activity_employee_detail.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/colorPrimary"
     tools:context=".activity.EmployeeDetailActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -18,13 +18,13 @@
             android:layout_marginLeft="16dp"
             android:layout_marginTop="16dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" >
+            app:layout_constraintTop_toTopOf="parent">
 
-         <ImageView
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:onClick="getBackToPrevious"
-            android:src="@drawable/ic_back" />
+            <ImageView
+                android:layout_width="36dp"
+                android:layout_height="36dp"
+                android:onClick="getBackToPrevious"
+                android:src="@drawable/ic_back" />
 
         </com.balysv.materialripple.MaterialRippleLayout>
 
@@ -41,14 +41,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:cardBackgroundColor="@color/colorPrimaryDarker"
+                app:cardCornerRadius="110dp"
+                android:layout_marginBottom="16dp"
+                app:cardPreventCornerOverlap="true">
+
             <ImageView
                 android:id="@+id/img_employee_profile_pic"
                 android:layout_width="220dp"
                 android:layout_height="220dp"
-                android:layout_marginBottom="16dp"
-                android:src="@drawable/ic_person">
+                android:src="@drawable/ic_person"/>
 
-            </ImageView>
+            </androidx.cardview.widget.CardView>
 
 
             <TextView
@@ -58,8 +66,8 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
                 android:fontFamily="serif"
-                android:textStyle="bold|italic"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:textStyle="bold|italic" />
 
 
             <androidx.appcompat.widget.LinearLayoutCompat
@@ -141,7 +149,8 @@
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
-
         </androidx.appcompat.widget.LinearLayoutCompat>
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.core.widget.NestedScrollView>
