--- a/app/src/main/res/layout/activity_not_connected.xml
+++ b/app/src/main/res/layout/activity_not_connected.xml
@@ -4,62 +4,60 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/colorPrimary"
     tools:context=".activity.NotConnectedActivity">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
         android:layout_gravity="center"
+        android:gravity="center"
         android:orientation="vertical">
 
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginBottom="36dp"
-        app:srcCompat="@drawable/ic_no_connection"
-        tools:ignore="VectorDrawableCompat" />
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:layout_marginTop="50dp"
+            android:layout_marginBottom="36dp"
+            app:srcCompat="@drawable/ic_no_connection"
+            tools:ignore="VectorDrawableCompat" />
 
-    <TextView
-        android:id="@+id/textView7"
-        style="@style/textViewStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
-        android:text="@string/no_internet_connection"
-        android:textAlignment="center"
-        android:textSize="22dp"
-        android:typeface="serif"
-        android:fontFamily="serif"
-        android:textStyle="bold|italic"/>
+        <TextView
+            android:id="@+id/textView7"
+            style="@style/textViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:fontFamily="serif"
+            android:text="@string/no_internet_connection"
+            android:textAlignment="center"
+            android:textSize="22dp"
+            android:textStyle="bold|italic"
+            android:typeface="serif" />
 
-    <TextView
-        android:id="@+id/textView8"
-        style="@style/textViewStyle"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="36dp"
-        android:text="@string/check_your_connection"
-        android:textAlignment="center"
-        android:fontFamily="serif"
-        android:textStyle="italic"
-        />
-
+        <TextView
+            android:id="@+id/textView8"
+            style="@style/textViewStyle"
+            android:layout_width="250dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="36dp"
+            android:fontFamily="serif"
+            android:text="@string/check_your_connection"
+            android:textAlignment="center"
+            android:textStyle="italic" />
 
 
-    <Button
-        android:id="@+id/btn_retry"
-        android:layout_width="220dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="64dp"
-        android:onClick="getBackToPrevious"
-        android:text="@string/retry"
-        android:textColor="@drawable/button_color_selector"
-        android:background="@drawable/button_state_colors"/>
+        <Button
+            android:id="@+id/btn_retry"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="64dp"
+            android:background="@drawable/button_state_colors"
+            android:onClick="getBackToPrevious"
+            android:text="@string/retry"
+            android:textColor="@drawable/button_color_selector" />
 
 
     </androidx.appcompat.widget.LinearLayoutCompat>
