--- a/app/src/main/res/layout/card_view_employee.xml
+++ b/app/src/main/res/layout/card_view_employee.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card_view_employee"
-    android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
     android:layout_margin="8dp"
-    android:clickable="true"
-    app:cardPreventCornerOverlap="true"
-    app:cardCornerRadius="20dp"
+    android:layout_marginTop="12dp"
+    android:layout_marginBottom="12dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginLeft="8dp"
     android:background="@android:color/white"
-    android:layout_gravity="center">
+    android:clickable="true"
+    app:cardCornerRadius="20dp"
+    app:cardPreventCornerOverlap="true"
+    android:layout_marginEnd="12dp">
 
     <com.balysv.materialripple.MaterialRippleLayout
         android:id="@+id/ripple"
@@ -18,13 +22,13 @@
         android:layout_height="wrap_content"
         android:clickable="true">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/lnr_employee"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:orientation="vertical">
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:id="@+id/lnr_employee"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:orientation="vertical">
 
 
             <ImageView
@@ -33,20 +37,18 @@
                 android:layout_height="100dp"
                 android:layout_margin="8dp" />
 
-                     <TextView
-                        android:id="@+id/txt_employee_name"
-                        style="@style/textViewStyle"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="serif"
-                         android:textStyle="bold|italic"
-                        android:layout_margin="8dp"
-                        android:textColor="@color/colorDarkGray"
-                        android:textAlignment="center"
-                        android:textSize="14sp"
-                         />
+            <TextView
+                android:id="@+id/txt_employee_name"
+                style="@style/textViewStyle"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:fontFamily="serif"
+                android:textAlignment="center"
+                android:textSize="14sp"
+                android:textStyle="bold|italic" />
 
-                </androidx.appcompat.widget.LinearLayoutCompat>
+        </androidx.appcompat.widget.LinearLayoutCompat>
 
     </com.balysv.materialripple.MaterialRippleLayout>
 
